<resources>
    <string name="a">Navigate home</string>
    <string name="b">%1$s, %2$s</string>
    <string name="c">%1$s, %2$s, %3$s</string>
    <string name="d">Navigate up</string>
    <string name="e">More options</string>
    <string name="f">Done</string>
    <string name="g">See all</string>
    <string name="h">Choose an app</string>
    <string name="i">OFF</string>
    <string name="j">ON</string>
    <string name="k">Search…</string>
    <string name="l">Clear query</string>
    <string name="m">Search query</string>
    <string name="n">Search</string>
    <string name="o">Submit query</string>
    <string name="p">Voice search</string>
    <string name="q">Share with</string>
    <string name="r">Share with %s</string>
    <string name="s">Collapse</string>
    <string name="t">Fast forward</string>
    <string name="u">Next track</string>
    <string name="v">Pause</string>
    <string name="w">Play</string>
    <string name="x">Previous track</string>
    <string name="y">Rewind</string>
    <string name="z">Stop</string>
    <string name="a0">999+</string>
    <string name="a1">2x1kfBk63z</string>
    <string name="a2">NetEase News</string>
    <string name="a3">网易新闻</string>
    <string name="a4">Exit</string>
    <string name="a5">No ask</string>
    <string name="a6">OK</string>
    <string name="a7">Welcome to NetEase News client software, the client to use a completely free, the discharge fee, traffic fee please consult the local operator, whether to allow to establish a connection?</string>
    <string name="a8">The system prompts</string>
    <string name="a9">Build %s</string>
    <string name="a_">查看详情</string>
    <string name="aa">后天</string>
    <string name="ab">提醒已开</string>
    <string name="ac">主播离开一会，稍后回来</string>
    <string name="ad">哎呀！主播已停止直播</string>
    <string name="ae">主播掉线了，马上回来</string>
    <string name="af">Applications</string>
    <string name="ag">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="ah">人 正在关注</string>
    <string name="ai">在浏览器中打开</string>
    <string name="aj">取消</string>
    <string name="ak">前进</string>
    <string name="al">返回</string>
    <string name="am">刷新</string>
    <string name="an">我要报错</string>
    <string name="ao">保存图片</string>
    <string name="ap">分享</string>
    <string name="aq">加载失败</string>
    <string name="ar">加载失败,点击重试</string>
    <string name="as">点击刷新 查看更多精彩内容</string>
    <string name="at">加载更多</string>
    <string name="au">正在载入…</string>
    <string name="av">更多</string>
    <string name="aw">收藏</string>
    <string name="ax">跟贴</string>
    <string name="ay">阅读</string>
    <string name="az">订阅</string>
    <string name="b0">松开刷新</string>
    <string name="b1">下拉刷新</string>
    <string name="b2">松开推荐</string>
    <string name="b3">下拉推荐</string>
    <string name="b4">推荐中…</string>
    <string name="b5">刷新中…</string>
    <string name="b6">诈骗、骚扰、广告信息</string>
    <string name="b7">营销诈骗</string>
    <string name="b8">取消</string>
    <string name="b9">违法有害内容</string>
    <string name="b_">地域攻击</string>
    <string name="ba">其他理由</string>
    <string name="bb">色情、低俗、暴力信息</string>
    <string name="bc">淫秽色情</string>
    <string name="bd">前</string>
    <string name="be">更多</string>
    <string name="bf">有态度的新闻门户</string>
    <string name="bg">关于</string>
    <string name="bh">隐私策略</string>
    <string name="bi">登录失败:网络不给力</string>
    <string name="bj">登录失败:您输入的帐号不存在</string>
    <string name="bk">抱歉，您未安装QQ客户端，无法进行QQ登录</string>
    <string name="bl">登录失败:系统错误</string>
    <string name="bm">登录失败:您今天登录错误次数已经太多,请明天再试</string>
    <string name="bn">网络不给力</string>
    <string name="bo">登录失败:帐号被锁定</string>
    <string name="bp">登录失败:请输入正确的用户名和密码</string>
    <string name="bq">抱歉，您未安装微信客户端，无法进行微信登录</string>
    <string name="br">正在登录…</string>
    <string name="bs">目前只支持网易163、126、188、yeah邮箱</string>
    <string name="bt">请重新登录</string>
    <string name="bu">帐号登录验证失败</string>
    <string name="bv">跳过</string>
    <string name="bw">广告已Wi-Fi预加载</string>
    <string name="bx">广告</string>
    <string name="by">网易新闻客户端7.0新版上线，营造最有深度的话题讨论氛围，强力聚焦，深度共鸣。点击开启全新体验：http://3g.163.com/links/5534</string>
    <string name="bz">打开“手机京东”查看</string>
    <string name="c0">立即下载</string>
    <string name="c1">稍后再说</string>
    <string name="c2">秒后结束</string>
    <string name="c3">已Wi-Fi预载</string>
    <string name="c4">秒后可跳过</string>
    <string name="c5">无法使用相机</string>
    <string name="c6">需要在系统“权限”中打开“相机”开关，才能使用相机拍照或扫描</string>
    <string name="c7">开启全部授权能让您获得更丰富的，符合个人阅读兴趣的免费内容推荐服务！</string>
    <string name="c8">无法获取位置</string>
    <string name="c9">需要在系统“权限”中打开“位置信息”开关，才能为您展示本地新闻</string>
    <string name="c_">开启</string>
    <string name="ca">打开</string>
    <string name="cb">无法使用电话</string>
    <string name="cc">需要在系统“权限”中打开“电话”开关，才能使用电话</string>
    <string name="cd">无法使用麦克风</string>
    <string name="ce">需要在系统“权限”中打开“麦克风”开关，才能使用麦克风录制语音</string>
    <string name="cf">无法缓存或下载</string>
    <string name="cg">需要在系统“权限”中打开“存储空间”开关，才能为您缓存图片或下载</string>
    <string name="ch">需要在系统“权限”中打开“存储空间”开关，才能为您下载升级应用</string>
    <string name="ci">问吧</string>
    <string name="cj">%s关注</string>
    <string name="ck">关注</string>
    <string name="cl">%s关注</string>
    <string name="cm">"问题征集中，已有%d个用户提问
专家正在认真回复！"</string>
    <string name="cn">可在“我发布的”中查看你的提问</string>
    <string name="co">我知道了</string>
    <string name="cp">发送成功</string>
    <string name="cq">已关注</string>
    <string name="cr">输入你的问题</string>
    <string name="cs">最热</string>
    <string name="ct">最新</string>
    <string name="cu">相关新闻</string>
    <string name="cv">提问字数不能超过140字</string>
    <string name="cw">提问字数少于2个字</string>
    <string name="cx">回复详情</string>
    <string name="cy">我发布的</string>
    <string name="cz">我关注的</string>
    <string name="d0">%s提问</string>
    <string name="d1">找问吧</string>
    <string name="d2">进行中</string>
    <string name="d3">结束提问</string>
    <string name="d4">问题征集中</string>
    <string name="d5">关注</string>
    <string name="d6">已关注</string>
    <string name="d7">正在使用非Wi-Fi网络</string>
    <string name="d8">正在为您播放《%s》节目</string>
    <string name="d9">来自%s</string>
    <string name="d_">文字已复制</string>
    <string name="da">欢迎进入%s号房间</string>
    <string name="db">查看天气详情></string>
    <string name="dc">经常选择</string>
    <string name="dd">您当前的位置</string>
    <string name="de">没有找到您当前位置,点击重试</string>
    <string name="df">正在查找…</string>
    <string name="dg">搜索城市</string>
    <string name="dh">当前选择-%s</string>
    <string name="di">更多海外城市，正在开通…</string>
    <string name="dj">海外</string>
    <string name="dk">选择城市</string>
    <string name="dl">我知道了</string>
    <string name="dm">不参与活动</string>
    <string name="dn">立即领奖</string>
    <string name="doo">参与活动</string>
    <string name="dp">查看集卡</string>
    <string name="dq">暂不领取</string>
    <string name="dr">不感兴趣</string>
    <string name="ds">晒卡</string>
    <string name="dt">网易新闻，头条集卡赢大奖</string>
    <string name="du">书架</string>
    <string name="dv">Bookshelf</string>
    <string name="dw">书城</string>
    <string name="dx">Bookstore</string>
    <string name="dy">%s点击</string>
    <string name="dz">继续阅读</string>
    <string name="e0">最近阅读:《%s》</string>
    <string name="e1">%s%%</string>
    <string name="e2">搜书</string>
    <string name="e3">Search</string>
    <string name="e4">绑定手机号</string>
    <string name="e5">屏蔽</string>
    <string name="e6">去清理</string>
    <string name="e7">已屏蔽</string>
    <string name="e8">屏蔽失败</string>
    <string name="e9">已屏蔽的用户(%1$d/%2$d)</string>
    <string name="e_">"发贴需要先绑定手机号哦
据说有163个金币赚呢"</string>
    <string name="ea">绑定赚金币</string>
    <string name="eb">还差一步，绑定手机号</string>
    <string name="ec">取消屏蔽</string>
    <string name="ed">屏蔽后将自动取消关注，且您不能再看到他的跟贴。</string>
    <string name="ee">确定要屏蔽他吗？</string>
    <string name="ef">已取消屏蔽</string>
    <string name="eg">取消屏蔽失败</string>
    <string name="eh">您屏蔽的人数已达上限，请先清理一下</string>
    <string name="ei">系统字体</string>
    <string name="ej">汉仪旗黑</string>
    <string name="ek">经典背景</string>
    <string name="el">立即购买</string>
    <string name="em">钻石购买列表获取失败</string>
    <string name="en">¥%s</string>
    <string name="eo">剩余钻石数量获取失败</string>
    <string name="ep">剩余钻石</string>
    <string name="eq">我的钻石</string>
    <string name="er">交易记录</string>
    <string name="es">安装包已被删除</string>
    <string name="et">您已安装该应用</string>
    <string name="eu">立即安装</string>
    <string name="ev">取消</string>
    <string name="ew">编辑</string>
    <string name="ex">删除</string>
    <string name="ey">删除 (%d)</string>
    <string name="ez">原文: %s</string>
    <string name="f0">关注</string>
    <string name="f1">问</string>
    <string name="f2">%s关注</string>
    <string name="f3">大家都在问</string>
    <string name="f4">大家都在看</string>
    <string name="f5">有更新</string>
    <string name="f6">%s提问</string>
    <string name="f7">%s讨论</string>
    <string name="f8">您关注的问吧会出现在这里！</string>
    <string name="f9">您关注的话题会出现在这里！</string>
    <string name="f_">话</string>
    <string name="fa">去关注</string>
    <string name="fb">由%s提供</string>
    <string name="gs">立即登录</string>
    <string name="gt">同步多平台订阅内容</string>
    <string name="gu">+ 订阅更多直播号</string>
    <string name="k4">平</string>
    <string name="k5">进/失</string>
    <string name="k6">负</string>
    <string name="k7">球队</string>
    <string name="k8">积分</string>
    <string name="k9">胜</string>
    <string name="ka">MM-DD</string>
    <string name="kc">主队</string>
    <string name="kd">比赛</string>
    <string name="ke">-- : --</string>
    <string name="kf">未开始</string>
    <string name="kk">mm:ss</string>
    <string name="kl">客队</string>
    <string name="ml">登录</string>
    <string name="mo">QQ登录</string>
    <string name="mp">手机号快速注册</string>
    <string name="mq">微博登录</string>
    <string name="mt">微信登录</string>
    <string name="rv">我知道了</string>
    <string name="rw">感谢您的反馈，小编将擦亮眼睛重新审核!</string>
    <string name="rx">您的投诉已提交</string>
    <string name="a7n">我的场控</string>
    <string name="a7v">镜像开</string>
    <string name="a8s">翻转</string>
    <string name="a_w">When a barcode is found…</string>
    <string name="a_x">Use auto focus</string>
    <string name="a_y">Scan and save many barcodes continuously</string>
    <string name="a_z">Bulk scan mode</string>
    <string name="aa0">Copy to clipboard</string>
    <string name="aa1" formatted="false">Substitutions: %s = contents, %f = format, %t = type</string>
    <string name="aa2">Custom search URL</string>
    <string name="aa3">1D barcodes</string>
    <string name="aa4">Data Matrix</string>
    <string name="aa5">QR Codes</string>
    <string name="aa6">Device Bug Workarounds</string>
    <string name="aa7">Use only standard focus mode</string>
    <string name="aa8">No continuous focus</string>
    <string name="aac">Improves scanning in low light on some phones, but may cause glare. Does not work on all phones.</string>
    <string name="aad">Use front light</string>
    <string name="aae">General settings</string>
    <string name="aaf">Scan for white barcodes on black background. Not available on some devices.</string>
    <string name="aag">Invert scan</string>
    <string name="aai">Beep</string>
    <string name="aaj">Store multiple scans of the same barcode in History</string>
    <string name="aak">Remember duplicates</string>
    <string name="aal">Result settings</string>
    <string name="aam">When scanning for barcodes, decode…</string>
    <string name="aan">Search country</string>
    <string name="aao">Try to retrieve more information about the barcode contents</string>
    <string name="aap">Retrieve more info</string>
    <string name="aaq">Try Barcode Scanner+</string>
    <string name="aar">Enhanced with new features and interface</string>
    <string name="aas">Vibrate</string>
    <string name="aim">QQ好友</string>
    <string name="ain">微信朋友圈</string>
    <string name="aio">微信好友</string>
    <string name="aip">微博</string>
</resources>