<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/a2c" android:background="@drawable/wk" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.netease.nr.base.view.MyButton android:textColor="@color/b7" android:id="@id/aa8" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="15.0dip" android:layout_marginRight="20.0dip" android:text="@string/ao" />
    <com.netease.nr.base.view.MyButton android:textColor="@color/b7" android:id="@id/aa9" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="15.0dip" android:layout_marginRight="20.0dip" android:text="@string/al" />
    <com.netease.nr.base.view.MyButton android:textColor="@color/b7" android:id="@id/aa_" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="20.0dip" android:text="@string/ak" />
    <com.netease.nr.base.view.MyButton android:textColor="#ff585e64" android:id="@id/aaa" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="20.0dip" android:text="@string/am" />
    <com.netease.nr.base.view.MyButton android:textColor="@color/b7" android:id="@id/aab" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="20.0dip" android:text="@string/ai" />
    <com.netease.nr.base.view.MyButton android:textColor="@color/b7" android:id="@id/aac" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="20.0dip" android:text="@string/ap" />
    <com.netease.nr.base.view.MyButton android:textColor="@color/b7" android:id="@id/aad" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="20.0dip" android:text="@string/an" />
    <com.netease.nr.base.view.MyButton android:textColor="@color/b7" android:id="@id/aa7" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="8.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="15.0dip" android:text="@string/aj" />
</LinearLayout>