<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/a2c" android:background="@drawable/wk" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.netease.nr.base.view.MyButton android:textColor="@color/b7" android:id="@id/aa3" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="20.0dip" android:text="@string/b7" />
    <com.netease.nr.base.view.MyButton android:textColor="#ff585e64" android:id="@id/aa4" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="20.0dip" android:text="@string/bc" />
    <com.netease.nr.base.view.MyButton android:textColor="@color/b7" android:id="@id/aa5" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="20.0dip" android:text="@string/b_" />
    <com.netease.nr.base.view.MyButton android:textColor="@color/b7" android:id="@id/aa6" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="20.0dip" android:text="@string/ba" />
    <com.netease.nr.base.view.MyButton android:textColor="@color/b7" android:id="@id/aa7" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="8.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="15.0dip" android:text="@string/b8" />
</LinearLayout>