<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/s9" android:textColor="@color/a3a" android:gravity="center" android:id="@id/b5q" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/aio" android:drawableTop="@drawable/azu" android:drawablePadding="8.0dip" android:layout_weight="1.0" />
    <TextView android:textSize="@dimen/s9" android:textColor="@color/a3a" android:gravity="center" android:id="@id/b5r" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/ain" android:drawableTop="@drawable/azk" android:drawablePadding="8.0dip" android:layout_weight="1.0" />
    <TextView android:textSize="@dimen/s9" android:textColor="@color/a3a" android:gravity="center" android:id="@id/b5s" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/aip" android:drawableTop="@drawable/azt" android:drawablePadding="8.0dip" android:layout_weight="1.0" />
    <TextView android:textSize="@dimen/s9" android:textColor="@color/a3a" android:gravity="center" android:id="@id/b5t" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/aim" android:drawableTop="@drawable/azc" android:drawablePadding="8.0dip" android:layout_weight="1.0" />
</LinearLayout>