<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:gravity="center" android:id="@id/h0" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.netease.nr.base.view.MoreButton android:textAppearance="@style/m9" android:textColor="@color/an" android:id="@id/nn" android:padding="10.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="7.0dip" android:text="@string/at" android:layout_alignParentTop="true" />
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/no" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignTop="@id/nn" android:layout_alignBottom="@id/nn">
        <ProgressBar android:id="@id/h1" android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/base_small_progressbar_style" />
        <com.netease.nr.base.view.MoreTextView android:textAppearance="@style/m9" android:id="@id/h2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:text="@string/au" />
    </LinearLayout>
    <com.netease.nr.base.view.MoreTextView android:textAppearance="@style/m9" android:gravity="center" android:id="@id/np" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/ar" android:layout_alignTop="@id/nn" android:layout_alignBottom="@id/nn" />
</RelativeLayout>