<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView android:layout_gravity="center" android:id="@id/sh" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="30.0dip" android:layout_marginRight="30.0dip" app:cardCornerRadius="4.0dip" app:cardElevation="@dimen/em"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <com.netease.nr.base.view.MyTextView android:textSize="16.0sp" android:gravity="center" android:id="@id/wm" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/rx" />
        <com.netease.nr.base.view.MyTextView android:textSize="14.0sp" android:gravity="center" android:id="@id/wn" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="30.0dip" android:layout_marginTop="16.0dip" android:layout_marginRight="30.0dip" android:text="@string/rw" android:lineSpacingMultiplier="1.3" />
        <com.netease.nr.base.view.MyTextView android:textSize="14.0sp" android:gravity="center" android:id="@id/wo" android:paddingTop="6.0dip" android:paddingBottom="6.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="75.0dip" android:layout_marginTop="16.0dip" android:layout_marginRight="75.0dip" android:layout_marginBottom="20.0dip" android:text="@string/rv" />
    </LinearLayout>
</android.support.v7.widget.CardView>